--- a/index.html
+++ b/index.html
@@ -5,13 +5,32 @@
   </body>
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const span = React.createElement(
-      "span",
-      { id: "sexy-span" },
-      "Hello, I am span!"
-    );
-    ReactDOM.render(span, root);
+    const Title = () => {
+      return (
+        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+          Hello I am title
+        </h3>
+      );
+    };
+
+    const Button = () => {
+      return (
+        <button onClick={() => console.log("I am clicked")}>Click me</button>
+      );
+    };
+
+    const Container = () => {
+      return (
+        <div>
+          <Title />
+          <Button />
+        </div>
+      );
+    };
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
